--- a/src/app/grid/detailed-move/detailed-move.component.html
+++ b/src/app/grid/detailed-move/detailed-move.component.html
@@ -1,2 +1,4 @@
-  <span>{{move}}</span>
-  <span class="egg-icon" *ngIf="isEggMove"><app-pokemon [slug]="'egg'"></app-pokemon></span>
+<span>{{ move }}</span>
+@if (isEggMove) {
+  <span class="egg-icon"><app-pokemon [slug]="'egg'"></app-pokemon></span>
+}
