--- a/src/app/shared/components/checkbox/checkbox.component.html
+++ b/src/app/shared/components/checkbox/checkbox.component.html
@@ -1,6 +1,8 @@
 <label class="inacitve-hider">
   <input type="checkbox" id="{{ controlID }}"
          [checked]="checked" (change)="onChange($event)">
-  <span class="material-icons" *ngIf="icon">{{icon}}</span>
+  @if (icon) {
+    <span class="material-icons">{{ icon }}</span>
+  }
   <span class="label"><ng-content></ng-content></span>
 </label>
