--- a/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
+++ b/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
@@ -1,10 +1,14 @@
-<li *ngIf="text" class="{{text | slugify}}">
-  <a [routerLink]="link" routerLinkActive="active">
-    <div class="icon"><ng-content select="app-item, app-pokemon"></ng-content></div>
-    <div class="content" [class.no-meta]="!meta">
-      <span class="title">{{text}}</span>
-      <span  class="meta-info">{{meta}}</span>
-    </div>
-  </a>
-</li>
+@if (text) {
+  <li class="{{text | slugify}}">
+    <a [routerLink]="link" routerLinkActive="active">
+      <div class="icon">
+        <ng-content select="app-item, app-pokemon"></ng-content>
+      </div>
+      <div class="content" [class.no-meta]="!meta">
+        <span class="title">{{ text }}</span>
+        <span class="meta-info">{{ meta }}</span>
+      </div>
+    </a>
+  </li>
+}
 
