--- a/src/app/tools/components/ultra-wormhole-shiny-dex/ultra-wormhole-shiny-dex.component.html
+++ b/src/app/tools/components/ultra-wormhole-shiny-dex/ultra-wormhole-shiny-dex.component.html
@@ -1,10 +1,17 @@
-<ng-container *ngIf="shinies$">
-  <app-grid appearance="minimal" class="friend-safari-grid" *ngIf="shinies$|async as shinies">
-    <ng-container *ngFor="let shinyDexentry of shinies">
-      <ng-container
-        *ngIf="(shinyDexentry[1] | shinyDexEntryToPokemon: {item: shinyDexentry[1].pokemon.uwObtainingMethod === 3 ? 'rare-candy' : null}) as pokemon">
-        <app-grid-item [pokemon]="pokemon"></app-grid-item>
-      </ng-container>
-    </ng-container>
-  </app-grid>
-</ng-container>
+@if (shinies$) {
+
+  @if (shinies$|async; as shinies) {
+    <app-grid appearance="minimal" class="friend-safari-grid">
+      @for (shinyDexentry of shinies; track shinyDexentry) {
+
+        @if ((shinyDexentry[1] | shinyDexEntryToPokemon: {item: shinyDexentry[1].pokemon.uwObtainingMethod === 3 ? 'rare-candy' : null}); as pokemon) {
+
+          <app-grid-item [pokemon]="pokemon"></app-grid-item>
+
+        }
+
+      }
+    </app-grid>
+  }
+
+}
