--- a/src/app/grid/grid-controller/grid-controller.component.scss
+++ b/src/app/grid/grid-controller/grid-controller.component.scss
@@ -98,7 +98,7 @@
 }
 
 .dark-panel {
-  background: #21262d;
+  --mat-select-panel-background-color: #21262d;
 
   .mat-mdc-option {
     color: #c9d1d9;
