--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,47 +1,22 @@
 @use '@angular/material' as mat;
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@import '@angular/material/theming';
-// Plus imports for other components in your app.
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
-//  The following line adds:
-//    1. Default typography styles for all components
-//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
-//  If you specify typography styles for the components you use elsewhere, you should delete this line.
-//  If you don't need the default component typographies but still want the hierarchy styles,
-//  you can delete this line and instead use:
-//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
-@include mat.all-legacy-component-typographies();
-@include mat.legacy-core();
+@include mat.core();
+$my-primary: mat.define-palette(mat.$indigo-palette, 500);
+$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$poketrades-primary: mat.define-palette(mat.$indigo-palette);
-$poketrades-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+// The "warn" palette is optional and defaults to red if not specified.
+$my-warn: mat.define-palette(mat.$red-palette);
 
-// The warn palette is optional (defaults to red).
-$poketrades-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$poketrades-theme: mat.define-light-theme((
+$my-theme: mat.define-light-theme((
   color: (
-    primary: $poketrades-primary,
-    accent: $poketrades-accent,
-    warn: $poketrades-warn,
-  )
+    primary: $my-primary,
+    accent: $my-accent,
+    warn: $my-warn,
+  ),
+  typography: mat.define-typography-config(),
+  density: 0,
 ));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-legacy-component-themes($poketrades-theme);
-
+@include mat.all-component-themes($my-theme);
 @import "~pokesprite-spritesheet/assets/pokesprite-pokemon-gen8.css";
 @import "~pokesprite-spritesheet/assets/pokesprite-inventory.css";
 
@@ -199,6 +174,12 @@ a {
 
 .mat-form-field .mat-form-field-infix {
   width: 190px;
+}
+
+.mdc-text-field--no-label:not(.mdc-text-field--outlined):not(.mdc-text-field--textarea) .mat-mdc-form-field-infix {
+  padding-top: 0;
+  padding-bottom: 0;
+  min-height: auto;
 }
 
 /**
